--- a/example.html
+++ b/example.html
@@ -24,8 +24,8 @@
 
 </style>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script> 
-<script src="../jquery.scroll.events.js"></script> 
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script> 
+<script src="jquery.scroll.events.js"></script> 
 
 <script>
 $(document).ready(function(){
